# tray-valet-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
src/: background_window.rs  cli.rs  foreign_process_tree.rs  main.manifest  main.rc  main.rs  win32.rs
src/win32/: base_window.rs  context_menu.rs  icon.rs  msg_loop.rs  tray_icon.rs  win_event_hook.rs
