[package]
name = "tray-valet"
version = "0.1.0"
description = "Background app hiding other apps in the Windows taskbar tray and bringing them back"
categories = ["command-line-utilities"]
keywords = ["microsoft-windows", "taskbar-tray", "administration", "declutter"]
repository = "https://github.com/Enyium/tray-valet-rs"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
dunce = "1.0.4"
nohash-hasher = "0.2.0"
num-derive = "0.4.1"
num-traits = "0.2.17"
win-msgbox = "0.1.2"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
anyhow = "1.0.75"
embed-resource = "2.4.0"
winres = "0.1.12"
